Separate posts beginning with Ask HN and Show HN into two different lists

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -76,11 +76,52 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We're specifically interested in posts whose titles begin with either _Ask HN_ or _Show HN_. \n",
+    "\n",
+    "Users submit _Ask HN_ posts to ask the Hacker News community a specific question. Below are a couple examples:\n",
+    "* Ask HN: How to improve my personal website?\n",
+    "* Ask HN: Am I the only one outraged by Twitter shutting down share counts?\n",
+    "* Ask HN: Aby recent changes to CSS that broke mobile?\n",
+    "\n",
+    "Likewise, users submit Show HN posts to show the Hacker News community a project, product, or just generally something interesting. Below are a couple of examples:\n",
+    "* Show HN: Wio Link  ESP8266 Based Web of Things Hardware Development Platform'\n",
+    "* Show HN: Something pointless I made\n",
+    "* Show HN: Shanhu.io, a programming playground powered by e8vm\n",
+    "\n",
+    "We'll compare these two types of posts to determine the following:\n",
+    "\n",
+    "1. Do Ask HN or Show HN receive more comments on average?\n",
+    "2. Do posts created at a certain time receive more comments on average?\n",
+    "\n",
+    "Let's separate posts beginning with _Ask HN_ and _Show HN_ (and case variations) into two different lists next."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ask_posts = []\n",
+    "show_posts = []\n",
+    "other_posts = []\n",
+    "\n",
+    "for row in hn:\n",
+    "    title = row[1]\n",
+    "    if title.lower().startswith(\"ask hn\"):\n",
+    "        ask_posts.append(row)\n",
+    "    elif title.lower().startswith(\"show hn\"):\n",
+    "        show_posts.append(row)\n",
+    "    else:\n",
+    "        other_posts.append(row)\n",
+    "        \n",
+    "print(len(ask_posts))\n",
+    "print(len(show_posts))\n",
+    "print(len(other_posts))"
+   ]
   }
  ],
  "metadata": {
