Data cleaning. Determine if ask posts or show posts receive more comments on average

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -30,10 +30,10 @@
     }
    ],
    "source": [
-    "from csv import reader\n",
+    "import csv\n",
     "\n",
     "with open(\"data_sets/HN_posts_year_to_Sep_26_2016.csv\", encoding='utf8') as data_file:\n",
-    "    hn = list(reader(data_file))\n",
+    "    hn = list(csv.reader(data_file))\n",
     "\n",
     "print(len(hn))\n",
     "headers = hn[0]\n",
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -79,6 +79,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "As we can see, we have posts without comments. \n",
+    "So we have to clean our data from such posts."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hn before cleaning: 293119\n",
+      "clean_hn after cleaning: 80401\n",
+      "clean_hn without header: 80400\n"
+     ]
+    }
+   ],
+   "source": [
+    "clean_hn = []\n",
+    "print(\"hn before cleaning: %s\" % len(hn))\n",
+    "for row in hn:\n",
+    "    n_comments = int(row[4])\n",
+    "    if n_comments > 0:\n",
+    "        clean_hn.append(row)\n",
+    "print(\"clean_hn after cleaning: %s\" % len(clean_hn))\n",
+    "headers = clean_hn[0]\n",
+    "clean_hn.remove(headers)\n",
+    "print(\"clean_hn without header: %s\" % len(clean_hn))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "We're specifically interested in posts whose titles begin with either _Ask HN_ or _Show HN_. \n",
     "\n",
     "Users submit _Ask HN_ posts to ask the Hacker News community a specific question. Below are a couple examples:\n",
@@ -101,15 +137,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6911\n",
+      "5059\n",
+      "68430\n"
+     ]
+    }
+   ],
    "source": [
     "ask_posts = []\n",
     "show_posts = []\n",
     "other_posts = []\n",
-    "\n",
-    "for row in hn:\n",
+    "for row in clean_hn:\n",
     "    title = row[1]\n",
     "    if title.lower().startswith(\"ask hn\"):\n",
     "        ask_posts.append(row)\n",
@@ -121,6 +166,64 @@
     "print(len(ask_posts))\n",
     "print(len(show_posts))\n",
     "print(len(other_posts))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, let's determine if ask posts or show posts receive more comments on average."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average comments in 'Ask HN' posts: 13.744175951381855\n"
+     ]
+    }
+   ],
+   "source": [
+    "total_ask_comments = 0\n",
+    "for row in ask_posts:\n",
+    "    total_ask_comments += int(row[4])\n",
+    "\n",
+    "avg_ask_comments = total_ask_comments / len(ask_posts)\n",
+    "print(\"Average comments in 'Ask HN' posts: %s\" % avg_ask_comments)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average comments in 'Show HN' posts: 9.810832180272781\n"
+     ]
+    }
+   ],
+   "source": [
+    "total_show_comments = 0\n",
+    "for row in show_posts:\n",
+    "    total_show_comments += int(row[4])\n",
+    "\n",
+    "avg_show_comments = total_show_comments / len(show_posts)\n",
+    "print(\"Average comments in 'Show HN' posts: %s\" % avg_show_comments)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We've determined that, on average, ask posts receive more comments than show posts. Since ask posts are more likely to receive comments, we'll focus our remaining analysis just on these posts."
    ]
   }
  ],
