Calculated the average number of comments ask posts receive by hour

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -12,7 +12,8 @@
     "### Analysis goal\n",
     "Our main goal will be to deteminate **Top 5 hours for posting to get most comments**\n",
     "\n",
-    "First we need to separate headers from rest of the data"
+    "## Step 1\n",
+    "First we need to take a look on our data set and separate headers from rest of the data"
    ]
   },
   {
@@ -79,6 +80,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Step 2\n",
     "As we can see, we have posts without comments. \n",
     "So we have to clean our data from such posts."
    ]
@@ -115,6 +117,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Step 3\n",
     "We're specifically interested in posts whose titles begin with either _Ask HN_ or _Show HN_. \n",
     "\n",
     "Users submit _Ask HN_ posts to ask the Hacker News community a specific question. Below are a couple examples:\n",
@@ -137,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -172,12 +175,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Step 4\n",
     "Next, let's determine if ask posts or show posts receive more comments on average."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +227,91 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We've determined that, on average, ask posts receive more comments than show posts. Since ask posts are more likely to receive comments, we'll focus our remaining analysis just on these posts."
+    "We've determined that, on average, _\"Ask\"_ posts receive more comments than _\"Show\"_ posts. Since ask posts are more likely to receive comments, we'll focus our remaining analysis just on these posts."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 5\n",
+    "Next, we'll determine if ask posts created at a certain time are more likely to attract comments. We'll use the following steps to perform this analysis:\n",
+    "\n",
+    "* Calculate the amount of ask posts created in each hour of the day, along with the number of comments received."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Posts count by hour:\n",
+      "{'02': 227, '01': 223, '22': 287, '21': 407, '19': 420, '17': 404, '15': 467, '14': 378, '13': 326, '11': 251, '10': 219, '09': 176, '07': 157, '03': 212, '16': 415, '08': 190, '00': 231, '23': 276, '20': 392, '18': 452, '12': 274, '04': 186, '06': 176, '05': 165}\n",
+      "\n",
+      "Comments count by hour:\n",
+      "{'02': 2996, '01': 2089, '22': 3372, '21': 4500, '19': 3954, '17': 5547, '15': 18525, '14': 4972, '13': 7245, '11': 2797, '10': 3013, '09': 1477, '07': 1585, '03': 2154, '16': 4466, '08': 2362, '00': 2277, '23': 2297, '20': 4462, '18': 4877, '12': 4234, '04': 2360, '06': 1587, '05': 1838}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import datetime as dt\n",
+    "result_list = []\n",
+    "for row in ask_posts:\n",
+    "    result_list.append([row[6], int(row[4])])\n",
+    "    \n",
+    "counts_by_hour = {}\n",
+    "comments_by_hour = {}\n",
+    "\n",
+    "for row in result_list:\n",
+    "    date_time = row[0]\n",
+    "    n_commnts = row[1]\n",
+    "    date_time = dt.datetime.strptime(date_time, \"%m/%d/%Y %H:%M\")\n",
+    "    hour = date_time.strftime(\"%H\")\n",
+    "    if hour not in counts_by_hour.keys():\n",
+    "        counts_by_hour[hour] = 1\n",
+    "        comments_by_hour[hour] = n_commnts\n",
+    "    else:\n",
+    "        counts_by_hour[hour] += 1\n",
+    "        comments_by_hour[hour] += n_commnts\n",
+    "    \n",
+    "print(\"Posts count by hour:\\n%s\\n\" % counts_by_hour)\n",
+    "print(\"Comments count by hour:\\n%s\" % comments_by_hour)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Calculate the average number of comments ask posts receive by hour"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average number of comments ask posts receive by hour created:\n",
+      "[['02', 13.198237885462555], ['01', 9.367713004484305], ['22', 11.749128919860627], ['21', 11.056511056511056], ['19', 9.414285714285715], ['17', 13.73019801980198], ['15', 39.66809421841542], ['14', 13.153439153439153], ['13', 22.2239263803681], ['11', 11.143426294820717], ['10', 13.757990867579908], ['09', 8.392045454545455], ['07', 10.095541401273886], ['03', 10.160377358490566], ['16', 10.76144578313253], ['08', 12.43157894736842], ['00', 9.857142857142858], ['23', 8.322463768115941], ['20', 11.38265306122449], ['18', 10.789823008849558], ['12', 15.452554744525548], ['04', 12.688172043010752], ['06', 9.017045454545455], ['05', 11.139393939393939]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "avg_by_hour = []\n",
+    "for counts_hour, posts in counts_by_hour.items():\n",
+    "    for comments_hour, comments in comments_by_hour.items():\n",
+    "        if counts_hour == comments_hour:\n",
+    "            avg_comments = comments/posts\n",
+    "            avg_by_hour.append([counts_hour, avg_comments])\n",
+    "            \n",
+    "print(\"Average number of comments ask posts receive by hour created:\\n%s\" % avg_by_hour)"
    ]
   }
  ],
