Print TOP 5 results

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -312,6 +312,46 @@
     "            avg_by_hour.append([counts_hour, avg_comments])\n",
     "            \n",
     "print(\"Average number of comments ask posts receive by hour created:\\n%s\" % avg_by_hour)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 6\n",
+    "Although we now have the results we need, this format makes it hard to identify the hours with the highest values. Let's finish by sorting the list of lists and printing the five highest values in a format that's easier to read."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15:00: 39.67 comments per post in average\n",
+      "13:00: 22.22 comments per post in average\n",
+      "12:00: 15.45 comments per post in average\n",
+      "10:00: 13.76 comments per post in average\n",
+      "17:00: 13.73 comments per post in average\n"
+     ]
+    }
+   ],
+   "source": [
+    "swap_avg_by_hour = []\n",
+    "for row in avg_by_hour:\n",
+    "    swap_avg_by_hour.append([row[1], row[0]])\n",
+    "\n",
+    "sorted_swap = sorted(swap_avg_by_hour, reverse=True)\n",
+    "top_5_hours_for_ask_posts_comments = sorted_swap[:5]\n",
+    "\n",
+    "for row in top_5_hours_for_ask_posts_comments:\n",
+    "    time_formated = dt.datetime.strptime(row[1], \"%H\")\n",
+    "    time_formated = time_formated.strftime(\"%H:%M\")\n",
+    "    comment = \"{}: {:.2f} comments per post in average\".format(time_formated, row[0])\n",
+    "    print(comment)"
    ]
   }
  ],
